# benchllm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchllm/: __init__.py  cache.py  data_types.py  evaluator.py  input_types.py  listener.py  similarity.py  singleton.py  tester.py  utils.py
benchllm/cli/: __init__.py  evaluator.py  listener.py  main.py  utils.py
benchllm/cli/commands/: add_test.py  evaluate.py  list_tests.py  run_suite.py
benchllm/cli/evaluator/: __init__.py  interactive.py  web.py
benchllm/evaluator/: __init__.py  embedding.py  evaluator.py  pipe.py  semantic.py  string_match.py
examples/chat/: 1.yml  2.yml  eval.py
examples/langchain_agent_search_calculator/: 1.yml  10.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml  converter.py  eval.py  script.py
examples/openai-evals/: eval.py
examples/qa/: 1.yml  2.yml  eval.py  script.py
examples/similarity/: benchllm.yml  eval.py  idempotency.yml  location.yml  number_detail.yml  solarsystem.yml  v7.yml  water_boiling.yml
examples/vector_retrieval/: 1.yml  2.yml  eval.py  utils.py
examples/weather_functions/: default.yml  eval.py  forecast.py  rainy.yml  sunny.yml  tomorrow.yml
test/: test_cli_main.py  test_evalutator.py  test_tester.py  utils.py
test/cache/: test_file_cache.py  test_memory_cache.py
test/cli/: test_interactive.py  test_list_tests.py  test_run_suite.py
test/evaulator/: test_evalutator.py  test_pipe.py  test_semantic.py  test_string_match.py
